--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,32 @@
-.App {
+body{
+  background-image:url("./background.JPG");
+  background-size: 8rem;
+  padding-bottom: 10px;
+  background-repeat: repeat-x;
+  background-position:center;
+  background-position-x: center;
+  background-position-y: 0px;
+}
+
+html{
+  background-image:url("./background.JPG");
+  background-size: 8rem;
+  background-repeat: repeat-x;
+  background-position:center;
+  background-position-x: center;
+  background-position-y: 400px;
+}
+
+.boxContainer {
+  margin-top: 20%;
+  padding-bottom: 10px;
+  margin-bottom: 2%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.author{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
