--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,27 +1,22 @@
 body{
   background-image:url("./background.JPG");
-  background-size: 8rem;
-  padding-bottom: 10px;
+  background-size: 6.5rem;
   background-repeat: repeat-x;
   background-position:center;
   background-position-x: center;
   background-position-y: 0px;
-}
-
-html{
-  background-image:url("./background.JPG");
-  background-size: 8rem;
-  background-repeat: repeat-x;
-  background-position:center;
-  background-position-x: center;
-  background-position-y: 400px;
+  margin: 0;
+  padding: 0;
 }
 
 .boxContainer {
-  margin-top: 20%;
-  padding-bottom: 10px;
+  margin-top:16%;
+  border:10px dotted rgb(191, 202, 86);
+  padding-bottom: 50px;
   margin-bottom: 2%;
   text-align: center;
+  font-size: 22px;
+  font-family: 'Pangolin', cursive;
 }
 
 .author{
@@ -30,3 +25,57 @@ html{
   text-align: center;
 }
 
+.button{
+  top:50%;
+  left: 50%;
+  width: 100px;
+  height: fit-content;
+  background: #fff;
+  border: 2px solid rgb(208, 107, 221);
+  border-radius: 75px;
+  line-height: 75px;
+  text-align:center;
+  font-size: 30px;
+  text-decoration: none;
+  color: rgb(149, 160, 85);
+}
+
+.button:hover{
+  color: rgb(195, 155, 221);
+}
+.img-1{
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  border-radius: 50px;
+}
+
+.img-2{
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-self: flex-end;
+  border-radius: 50px;
+  margin-left:auto;
+}
+
+i{
+  color: rgb(131, 31, 48);
+}
+
+@media(max-width:1000px){
+  .boxContainer {
+    margin-top:22%;
+    border:10px dotted rgb(191, 202, 86);
+  }
+  img{
+    margin-top: 10px;
+  }
+}
+
+@media(max-width:800px){
+  .boxContainer {
+    margin-top:180px;
+  }
+}
